# test1

./: .clang-format  .gitignore  CMakeLists.txt  README.md
backup/: CMakeLists.txt
backup/include/: Apartment.h  Client.h  ClientDialog.h  ClientManager.h  CommercialProperty.h  EstateAgency.h  MainWindow.h  Property.h  PropertyDialog.h  PropertyManager.h  Transaction.h  TransactionDialog.h  TransactionManager.h
backup/src/: Apartment.cpp  EstateAgency.cpp  House.cpp  MainWindow.cpp  PropertyDialog.cpp  PropertyManager.cpp  TransactionDialog.cpp
data/: clients.txt
include/: Apartment.h  Auction.h  AuctionDialog.h  AuctionManager.h  Bid.h  Client.h  ClientDialog.h  ClientManager.h  CommercialProperty.h  Constants.h  EstateAgency.h  House.h  MainWindow.h  Property.h  PropertyDialog.h  PropertyManager.h  TableHelper.h  Transaction.h  TransactionDialog.h  TransactionManager.h  Utils.h
src/: Apartment.cpp  Auction.cpp  AuctionDialog.cpp  AuctionManager.cpp  Bid.cpp  Client.cpp  ClientDialog.cpp  ClientManager.cpp  CommercialProperty.cpp  EstateAgency.cpp  House.cpp  MainWindow.cpp  Property.cpp  PropertyDialog.cpp  PropertyManager.cpp  Transaction.cpp  TransactionDialog.cpp  TransactionManager.cpp  main.cpp
